--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +33,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App {
+  text-align: center;
+width: 100vw;
 }
